# practice_celery

./: main.py  pyproject.toml  run.py
proj/: main.py  tasks.py
